# file-async-rpc

./: Cargo.toml  README.md  build.rs
benches/: grpc.rs
proto/: file_transfer.proto  service.proto
src/: client.rs  lib.rs  message.rs  packet.rs  server.rs
tests/: test_rpc.rs
