[package]
name = "file-async-rpc"
version = "0.1.0"
edition = "2021"
authors = ["Asklv <boironic@gmail.com>"]

[dependencies]
async-trait = "0.1.80"
flume = "0.11.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tonic = "0.7"
prost = "0.10"
bytes = "1.1"

[dev-dependencies]
criterion = "0.3"
tonic-build = "0.7"
