[package]
name = "file-async-rpc"
version = "0.1.0"
edition = "2021"
authors = ["Asklv <boironic@gmail.com>"]

[dependencies]
async-trait = "0.1.80"
flume = "0.11.0"
tokio = { version = "1", features = ["full", "test-util"] }
tracing = "0.1"
hyper = "0.14"
tracing-subscriber = "0.3"
tonic = "0.6"
prost = "0.9"
bytes = "1.1"

[build-dependencies]
tonic-build = "0.7"

[exclude]
path = "src/bin"